Scrub all remaining uses of DatatypeConverter