@@ -34,9 +34,8 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.nio.ByteBuffer;
+import java.util.Base64;
 import java.util.zip.CRC32;
-
-import javax.xml.bind.DatatypeConverter;
 
 import com.dabomstew.pkrandom.exceptions.InvalidSupplementFilesException;
 import com.dabomstew.pkrandom.newgui.NewRandomizerGUI;
@@ -90,7 +89,7 @@ public class Utils {
 
     public static void validatePresetSupplementFiles(String config, CustomNamesSet customNames)
             throws InvalidSupplementFilesException {
-        byte[] data = DatatypeConverter.parseBase64Binary(config);
+        byte[] data = Base64.getDecoder().decode(config);
 
         if (data.length < Settings.LENGTH_OF_SETTINGS_DATA + 9) {
             throw new InvalidSupplementFilesException(InvalidSupplementFilesException.Type.UNKNOWN,
